--- a/css/main.css
+++ b/css/main.css
@@ -358,6 +358,7 @@ footer .container {
     /* HEADER */
     header .container{
         width: 100%;
+        justify-content: space-around;
     }
 
     .nav-items {
@@ -421,8 +422,12 @@ footer .container {
         justify-content: space-around;
     }
 
-    .recent-work-item:last-child {
-        display: none;
+    .recent-work-item {
+        width: 24%;
+    }
+
+    .recent-work-item img {
+        width: 100%;
     }
 
     .recent-work h2 {
@@ -502,7 +507,16 @@ footer .container {
     /* END BANNER SECTION */
 
     /* RECENT-WORK SECTION */
-    .recent-work-item:nth-child(3) {
+
+    .recent-work-item {
+        width: 30%;
+    }
+
+    .recent-work-item img {
+        width: 100%;
+    }
+
+    .recent-work-item:last-child {
         display: none;
     }
     /* END RECENT-WORK SECTION */
@@ -517,8 +531,12 @@ footer .container {
         align-items: center;
     }
 
-    header .logo {
-        border-bottom: 1px solid #C3C3C3;
+    header .nav-items {
+        background: #F1F1F2;
+        border-bottom: 1px solid grey;
+        border-top: 1px solid #C3C3C3;
+        box-shadow: 0px 1px 1px 0px grey;
+        margin-bottom: 20px;
     }
 
     header .nav-item {
@@ -526,6 +544,18 @@ footer .container {
         border-bottom: 1px solid #C3C3C3;
     }
     /* END HEADER */
+
+
+    /* RECENT-WORK SECTION */
+    .recent-work-item:nth-child(2) {
+        display: none;
+    }
+
+    .recent-work-item {
+        width: 40%;
+    }
+
+    /* END RECENT-WORK SECTION */
 }
 
 
