categories link touch struggle fixed
There is more space to click a link with devices which use touch
functions

--- a/css/main.css
+++ b/css/main.css
@@ -712,6 +712,10 @@ span.italic {
     .sidebar-item .title img {
         display: none;
     }
+
+    .sidebar-item:nth-child(2) ul li {
+        margin-bottom: 15px;
+    }
 }
 
 
