padding struggle fixed

--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,7 @@ a {
     max-width: 940px;
     margin: 0 auto;
     box-sizing: border-box;
+    padding: 10px;
 }
 
 /* HEADER */
@@ -685,6 +686,13 @@ span.italic {
 
 
 @media screen and (max-width: 940px) {
+    /* HEADER */
+    .header-top {
+        padding: 0 5px;
+        box-sizing: border-box;
+    }
+    /* END HEADER*/
+
     .about-pagewrapper {
         display: inline;
     }
