--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,11 @@ a {
     max-width: 940px;
     margin: 0 auto;
     box-sizing: border-box;
-    padding: 5px;
+    padding: 0 10px;
+}
+
+.small-main {
+    width: 71.38%;
 }
 
 /* HEADER */
@@ -165,13 +169,15 @@ a {
 /* END HEADER */
 
 
-
-
 /*===== SECTIONS HOMEPAGE ==========*/
 
 /* SLIDER SECTION */
 .slider {
     position: relative;
+}
+
+.slider .slide-img {
+    width: 100%;
 }
 
 .arrow-navigation img {
@@ -180,11 +186,11 @@ a {
     cursor: pointer;
 }
 
-.banner .slide-left {
+.slide-left {
     left: 2%;
 }
 
-.banner .slide-right {
+.slide-right {
     right: 2%;
 }
 
@@ -268,10 +274,6 @@ section.recent-work .recent-work-title {
 
 
 /*===== SECTIONS ABOUT-US PAGE ==========*/
-.about-main {
-    width: 71.38%;
-}
-
 /* SECTION IMG-FLOAT */
 section.img-float {
     margin: 20px 0;
@@ -418,7 +420,147 @@ section.columns {
 }
 /* END SIDEBAR*/
 
+/*===== END SECTIONS BLOG PAGE ==========*/
 
+/* POST */
+.post {
+    position: relative;
+    margin-bottom: 50px;
+}
+
+.post:last-of-type {
+    margin-bottom: 30px;
+}
+
+.post .desc {
+    width: 75%;
+}
+
+.post h3 {
+    font-size: 1.125rem;
+    color: #e8603c;
+    margin: 25px 0;
+}
+
+.post h5 {
+    font-size:  0.75rem;
+    color: #e8603c;
+}
+
+.post a {
+    color: #c3c3c3;
+    font-size: 0.75rem;
+    font-family: helvetica;
+}
+
+
+.post .desc p {
+    margin-bottom: 25px;
+}
+
+.post .stats {
+    margin-top: 25px;
+}
+
+.post .stats p {
+    font-size: 0.75rem;
+    font-family: Bebas;
+    color: #c3c3c3;
+    margin: 10px 0 20px 0;
+}
+
+.post .stats:last-child {
+    margin-bottom: 0;
+}
+
+.post .dotted {
+    width: 100%;
+}
+
+.post5 h3 {
+    margin-bottom: 0px;
+}
+
+.post5 p {
+    margin: 20px 0 40px 0;
+}
+/* END POST */
+
+/* POST4 SECTION */
+.quote-box {
+    background: #f4f4f4;
+    margin-bottom: 60px;
+}
+
+.quote-box p {
+    width: 90%;
+    padding: 25px;
+}
+
+.quotation-box {
+    width: 10%;
+    position: relative;
+}
+
+.quotation-box h3 {
+    font-family: georgia;
+    font-size: 4.5rem;
+    position: absolute;
+    margin: 0;
+    top: 0;
+    right: 0;
+}
+
+/* END POST4 SECTION*/
+
+
+/*===== END SECTIONS PORTFOLIO PAGE ==========*/
+/* PORTFOLIO SECTION */
+.portfolio .filter {
+    margin: 30px 0;
+}
+
+.portfolio .filter-item {
+    margin-right: 15px;
+    padding: 5px 10px;
+}
+
+.filter-item a {
+    color: #c3c3c3;
+    font-family: Bebas;
+    font-size: 0.875rem;
+    font-weight: normal;
+}
+
+.filter-active {
+    background: #e8603c;
+}
+
+.filter-active a {
+    color: #fff;
+}
+
+.portfolio-items {
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+}
+
+.portfolio-item {
+    margin-bottom: 40px;
+}
+
+.portfolio-item p {
+    color: #e8663c;
+    font-size: 0.6875rem;
+    font-family: Bebas;
+}
+
+.portfolio-item .desc {
+    border: 1px solid #b9b9b9;
+    border-top: none;
+    padding: 10px;
+}
+/* END PORTFOLIO SECTION */
 
 
 /* FOOTER */
@@ -513,6 +655,23 @@ footer .container {
     color: #F3AF9D;
 }
 
+/* pagination */
+.pagination-item {
+    background: #f3b29d;
+    padding: 5px 10px;
+    margin: 0 5px 40px 0;
+}
+
+.pagination-item a {
+    color: #fff;
+    font-size: 0.875rem;
+}
+
+.pagination-active {
+    background: #e8603c;
+}
+/* end pagination */
+
 /* spans */
 span.DropCaps {
     font-size: 2.25rem;
@@ -536,6 +695,13 @@ span.italic {
     padding: 8px 12px;
     font-weight: normal;
     margin-top: 15px;
+}
+
+/* post-icon */
+.post-icon img {
+    position: absolute;
+    left: -87px;
+    top: 0;
 }
 
 /* banner section default */
@@ -571,8 +737,18 @@ span.italic {
 
 
 /*===== MEDIA QUIRIES ==========*/
+@media screen and (max-width: 1110px) {
+    .post-icon {
+        display: none;
+    }
+}
+
 @media screen and (max-width: 980px) {
-    
+    .small-main {
+        padding: 0 5px;
+        box-sizing: border-box;
+    } 
+
     /* HEADER */
 
     .nav-items {
@@ -664,14 +840,6 @@ span.italic {
     /* END RECENT-WORK SECTION */
 
 
-    /* ABOUT-MAIN */
-    .about-main {
-        padding: 0 5px;
-        box-sizing: border-box;
-    }  
-    /* END ABOUT-MAIN*/
-
-
     /* FOOTER */
     footer {
         background: none;
@@ -686,6 +854,10 @@ span.italic {
 
 
 @media screen and (max-width: 940px) {
+    .pagewrapper {
+        display: inline;
+    }
+
     /* HEADER */
     .header-top {
         padding: 0 5px;
@@ -693,11 +865,8 @@ span.italic {
     }
     /* END HEADER*/
 
-    .about-pagewrapper {
-        display: inline;
-    }
 
-    .about-main {
+    .small-main {
         width: 100%;
     }
 
@@ -820,6 +989,13 @@ span.italic {
         margin-bottom: 0;
     }
     /* END COLUMNS SECTION */
+
+
+    /* PORTFOLIO SECTION */
+    .portfolio-items {
+        justify-content: space-around;
+    }
+    /* END PORTFOLIO SECTION */
 
     /* SIDEBAR */
     .sidebar-items {
